29Jun07=======================================================================
1. If a node is set/isolated then make sure that a) pc9x is not advertised
and b) pc9x is ignored.
2. Add (un)set/wantpc9x command (but please don't use them without talking
to me first), here be dragons!!
25Jun07=======================================================================
1. make sure that a C record is sent for node call every update period.
2. make announces work again (probably).
3. Fix long standing possibility of a crash with a new user.
4. Add continuous chatting (like talk with no message eg 'chat #9000' just on
its own with no message).
24Jun07=======================================================================
1. Fix the routing algorithms to allow route selection in the face of
incomplete trees of nodes (trees as produced by sh/newc).
2. Fix the obscout issues which mean that many nodes get timed out after 3hrs.
3. Extend 4m to 70631 to cover CT.
23Jun07=======================================================================
1. fix basic deduping algorithm
2. rearrange node startup protocol to avoid issuing unnecessary PC92 and also
to spread the PC92Cs out for dependent nodes.
3. increase the PC92C update time to 1 hour.
4. fix sh/route, with a view toward replacing Route::alldxchan.
5. downgrade a link advertising pc9x if no PC92C forthcoming from it back to
old style protocol and carry on, rather than disconnecting (protocol facist
that I was).
6. Fix isolated pc9x nodes so that they remain in oldstyle protocol.
22Jun07=======================================================================
1. Fix Alias for sh/mydx (so it isn't the same as sh/myfdx).
2. Fix sh/c/n uninitialised variable message
3. Fix (and improve) sh/newc gb7 problem
4. Fix broken set/sys_qra command
21Jun07=======================================================================
1. merge back SIMPLEROUTE branch to issue as official 1.54.