@@ -1,3 +1,7 @@
+02Jul07=======================================================================
+1. Add a new command to show the contents of the cmd_cache. This allows those
+people whom develop their own commands to see which version they are using.
+It is called show/cmd_cache (or sh/cmd for short).
 29Jun07=======================================================================
 1. If a node is set/isolated then make sure that a) pc9x is not advertised
 and b) pc9x is ignored.
